<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/page_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/title"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="@dimen/margin_xlrg"
            android:layout_marginRight="@dimen/margin_xlrg"
            android:layout_marginLeft="@dimen/margin_xlrg"

            app:layout_constraintTop_toBottomOf="@+id/page_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field_1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_xlrg"
            android:layout_marginLeft="@dimen/margin_xlrg"
            app:layout_constraintTop_toBottomOf="@+id/name_1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/password_field_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_xlrg"
            android:layout_marginLeft="@dimen/margin_xlrg"
            app:layout_constraintTop_toBottomOf="@+id/email_field_1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/confirm_password_field_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm"
            android:layout_marginTop="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_xlrg"
            android:layout_marginLeft="@dimen/margin_xlrg"
            app:layout_constraintTop_toBottomOf="@+id/password_field_1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_field_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/about_me_field_1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/about"
            android:layout_marginTop="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_xlrg"
            android:layout_marginLeft="@dimen/margin_xlrg"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_field_1">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/about_me_field_2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:maxLines="18"
                android:lines="18"
                android:textAlignment="viewStart"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:padding="@dimen/margin_md"
            android:textSize="@dimen/text_md"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_xlrg"
            android:layout_marginLeft="@dimen/margin_xlrg"
            android:background="@drawable/btn"
            app:layout_constraintTop_toBottomOf="@id/about_me_field_1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn"
            android:padding="@dimen/margin_md"
            android:layout_marginTop="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_xlrg"
            android:layout_marginLeft="@dimen/margin_xlrg"
            android:layout_marginBottom="@dimen/margin_md"
            android:textSize="@dimen/text_md"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            app:layout_constraintTop_toBottomOf="@id/sign_up_btn"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>